<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_new_record"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sizebook.AddNewRecordActivity"
    tools:showIn="@layout/activity_add_new_record">

    <EditText
        android:id="@+id/name"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textAlignment="center"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:id="@+id/neck"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/neck"
        android:layout_below="@+id/date_dialog_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectDate"
        android:id="@+id/date_dialog_button"
        android:layout_below="@+id/name"
        android:layout_toStartOf="@+id/clear_field_button"
        android:layout_toLeftOf="@+id/clear_field_button"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/AddDateTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@+id/neck"
        android:layout_below="@+id/name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/date_dialog_button"
        android:layout_toLeftOf="@id/date_dialog_button"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:hint="@string/dateHint" />

    <Button
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/clear_field_button"
        android:layout_below="@+id/name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="clearFieldOnClick"/>


    <View
        android:id="@+id/dummyview"
        android:layout_width="0px"
        android:layout_height="0px"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bust"
        android:textAlignment="center"
        android:textColor="#000000"
        android:id="@+id/bust"
        android:layout_below="@+id/neck"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/chest"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/chest"
        android:textAlignment="center"
        android:textColor="#000000"
        android:layout_below="@+id/bust"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/waist"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/waist"
        android:textAlignment="center"
        android:textColor="#000000"
        android:layout_below="@+id/chest"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/hip"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hip"
        android:textAlignment="center"
        android:textColor="#000000"
        android:layout_below="@+id/waist"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/inseam"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inseam"
        android:textAlignment="center"
        android:textColor="#000000"
        android:layout_below="@+id/hip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/comment"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment"
        android:textAlignment="center"
        android:textColor="#000000"
        android:layout_below="@+id/inseam"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/asterisk_legend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/asterisk_legend"
        android:textStyle="normal|italic"
        android:textAlignment="center"
        android:layout_below="@+id/comment"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
