<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_edit_record"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sizebook.EditRecordActivity"
    tools:showIn="@layout/activity_edit_record">

    <EditText
        android:id="@+id/name"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textAlignment="center"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:id="@+id/neck"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dimension_in_inches"
        android:layout_below="@+id/date_dialog_button"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:layout_toEndOf="@+id/textView1"
        android:layout_toRightOf="@+id/textView1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectDate"
        android:id="@+id/date_dialog_button"
        android:layout_below="@+id/name"
        android:layout_toStartOf="@+id/clear_field_button"
        android:layout_toLeftOf="@+id/clear_field_button"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/AddDateTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@+id/neck"
        android:layout_below="@+id/name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/date_dialog_button"
        android:layout_toLeftOf="@id/date_dialog_button"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:hint="@string/dateHint" />

    <Button
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/clear_field_button"
        android:layout_below="@+id/name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="clearFieldOnClick"/>


    <View
        android:id="@+id/dummyview"
        android:layout_width="0px"
        android:layout_height="0px"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/chest"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dimension_in_inches"
        android:textAlignment="center"
        android:textColor="#000000"
        android:layout_below="@+id/bust"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toRightOf="@+id/textView2" />

    <EditText
        android:id="@+id/waist"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dimension_in_inches"
        android:textAlignment="center"
        android:textColor="#000000"
        android:layout_below="@+id/chest"
        android:layout_alignLeft="@+id/chest"
        android:layout_alignStart="@+id/chest" />

    <EditText
        android:id="@+id/hip"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dimension_in_inches"
        android:textAlignment="center"
        android:textColor="#000000"
        android:layout_below="@+id/waist"
        android:layout_toEndOf="@+id/textView4"
        android:layout_toRightOf="@+id/textView4" />

    <EditText
        android:id="@+id/inseam"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dimension_in_inches"
        android:textAlignment="center"
        android:textColor="#000000"
        android:layout_below="@+id/hip"
        android:layout_alignLeft="@+id/hip"
        android:layout_alignStart="@+id/hip" />

    <EditText
        android:id="@+id/comment"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="#000000"
        android:layout_below="@+id/inseam"
        android:layout_toEndOf="@+id/textView6"
        android:layout_toRightOf="@+id/textView6" />

    <TextView
        android:text="@string/asterisk_legend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/asterisk_legend"
        android:textStyle="normal|italic"
        android:textAlignment="center"
        android:layout_below="@+id/comment"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="Neck:"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/AddDateTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView1"
        android:textSize="18sp"
        android:layout_above="@+id/bust"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <TextView
        android:text="Bust:"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView2"
        android:textSize="18sp"
        android:layout_above="@+id/chest"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />

    <TextView
        android:text="Chest:"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView3"
        android:textSize="18sp"
        android:layout_above="@+id/waist"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <TextView
        android:text="Waist:"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView4"
        android:textSize="18sp"
        android:layout_above="@+id/hip"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignEnd="@+id/textView5" />

    <TextView
        android:text="Hip:"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView5"
        android:textSize="18sp"
        android:layout_above="@+id/inseam"
        android:layout_alignRight="@+id/textView6"
        android:layout_alignEnd="@+id/textView6" />

    <TextView
        android:text="Inseam:"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp"
        android:layout_above="@+id/comment"
        android:layout_alignRight="@+id/textView7"
        android:layout_alignEnd="@+id/textView7" />

    <TextView
        android:text="Comment:"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView7"
        android:textSize="18sp"
        android:layout_above="@+id/asterisk_legend" />

    <EditText
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dimension_in_inches"
        android:textAlignment="center"
        android:textColor="#000000"
        android:id="@+id/bust"
        android:layout_below="@+id/neck"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView1"
        android:layout_toEndOf="@+id/textView1" />
</RelativeLayout>

